PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Fix openmpi on Gentoo external dependency
- pts-core: Detect graphics comparison when GPU changes with audio string
- pts-core: Don't use HTTPS on proxies when connecting to OpenBenchmarking.org

Phoronix Test Suite 4.8.2-Sokndal
30 August 2013

- pts-core: Fix for reporting environment variables to system notes on system graph table
- pts-core: Fix OpenBenchmarking.org class issue for select code paths

Phoronix Test Suite 4.8.1-Sokndal
14 August 2013

- pts-core: Fix OpenBenchmarking.org log-ins

Phoronix Test Suite 4.8.0-Sokndal
13 August 2013

- pts-core: When PHP is missing, for apt-get/yum distributions report the likely command needed to run
- pts-core: Don't prompt to install missing/failed tests when using the 'benchmark' command
- phodevi: Support for reading the Radeon DRM driver's current core/memory frequencies when DPM is enabled (Linux 3.11+)
- phodevi: Support for reading the top Radeon DRM driver core/memory frequency via dmesg when DPM is enabled (Linux 3.11+)
- phodevi: Support for reading the Radeon DRM driver's current GPU (vddc) voltage when DPM is enabled (Linux 3.11+)
- phoromatic: Updated module against latest upstream Phoromatic.com Server

Phoronix Test Suite 4.8 Milestone 5
6 August 2013

- pts-core: Add php5-json as a dependency now on Debian packages since Ubuntu split it up and no longer in php5-cli
- pts-core: Add support for reporting set kernel module parameters to notes on the system table graph
- pts-core: Add support for reporting of important environment variables to notes on the system table graph
- pts-core: Changes needed for modern Phoromatic
- pts_Graph: Add new automated color chooser for line graph color selection
- pts_Graph: Slight rework to code handling the remove of common words from result identifiers
- phodevi: Add support for Intel DRM driver's gt_max_freq_mhz for obtaining maximum GPU frequency on modern kernels